syntax = "proto3";

package backend.key;

option java_package = "com.yanivian.connect.backend.proto.key";
option java_multiple_files = true;

message ChatMessageKey {
  string ChatID = 1;
  int64 MessageID = 2;
}

message ChatParticipantKey {
  string ChatID = 1;
  string UserID = 2;
}